Add remote keymapping to the manual for the iriver H100.  Plugins have not yet been done and currently just have a blank column.  Most plugins only quit via the remote anyway at this point.  Please notify of any errors/omissions (I'm sure there are some).
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21547 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/configure_rockbox/bookmarking.tex
+++ b/manual/configure_rockbox/bookmarking.tex
@@ -64,21 +64,27 @@
 \begin{table}
     \begin{btnmap}{}{}
       \ActionStdNext
+      \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdNext}
       & Selects the next bookmark.\\
       %
       \ActionStdPrev
+      \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdPrev}
       & Selects the previous bookmark.\\
       %
       \ActionStdOk
+      \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdOk}
       & Resumes from the selected bookmark.\\
       %
       \ActionStdCancel
+      \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdCancel}
       & Exits Recent Bookmark menu\\
       %
       \nopt{GIGABEAT_S_PAD}{\ActionBmDelete
+      \opt{IRIVER_RC_H100_PAD}{& \ActionRCBmDelete}
       & Deletes the currently selected bookmark\\}
       %
-      \ActionStdContext  
+      \ActionStdContext
+      \opt{IRIVER_RC_H100_PAD}{& \ActionRCStdContext}
       & Enters the context menu for the selected bookmark.\\
     \end{btnmap}
 \end{table}
