--- a/manual/plugins/brickmania.tex
+++ b/manual/plugins/brickmania.tex
@@ -25,6 +25,7 @@ effect, you must catch it with the paddle. Look out for the bad ones.\\
 \begin{table}
     \begin{btnmap}{}{}
     \ButtonLeft\ / \ButtonRight
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{SANSA_C200_PAD}{\\
         \ButtonVolDown\ / \ButtonVolUp}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\\
@@ -34,10 +35,12 @@ effect, you must catch it with the paddle. Look out for the bad ones.\\
     \opt{ONDIO_PAD}{\ButtonMenu\ / \ButtonUp}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
       ,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect\ / \ButtonUp}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonPlay\ / \ButtonScrollUp}
     & Release the ball / Fire\\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
