--- a/manual/plugins/chessbox.tex
+++ b/manual/plugins/chessbox.tex
@@ -32,17 +32,20 @@ the game.
     \begin{btnmap}{}{}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu, \ButtonPlay, \ButtonLeft, \ButtonRight}
     \nopt{IPOD_4G_PAD,IPOD_3G_PAD}{Direction keys} 
+    \opt{IRIVER_RC_H100_PAD}{&}
     & Move the cursor\\
     \opt{RECORDER_PAD}{\ButtonPlay}
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD%
       ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
       {\ButtonSelect}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     & Pick up / Drop piece\\
     \opt{RECORDER_PAD}{\ButtonFOne}
     \opt{ONDIO_PAD}{\ButtonMenu+\ButtonOff}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonRight}
     \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
@@ -50,6 +53,7 @@ the game.
     \opt{MROBE100_PAD}{\ButtonDisplay}
     & Change level\\
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{ONDIO_PAD}{Long \ButtonMenu}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonPlay}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
@@ -59,6 +63,7 @@ the game.
     \opt{MROBE100_PAD}{\ButtonPlay}
     & Force play\\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonPower}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonPower}
