--- a/manual/plugins/disktidy.tex
+++ b/manual/plugins/disktidy.tex
@@ -22,7 +22,7 @@
   
   \begin{table}
     \begin{btnmap}{}{}
-      \ActionStdCancel
+      \ActionStdCancel      \opt{IRIVER_RC_H100_PAD}{&} 
       & Exit / Abort\\
     \end{btnmap}
 \end{table}
