--- a/manual/plugins/jackpot.tex
+++ b/manual/plugins/jackpot.tex
@@ -6,8 +6,8 @@ have 20\$.  Payouts are given when three matching symbols come up.
 
 \begin{table}
 \begin{btnmap}{}{}
-\ButtonPlay   & Play \\
-\ButtonStop   & Exit the game \\
+\ButtonPlay      \opt{IRIVER_RC_H100_PAD}{&}    & Play \\
+\ButtonStop      \opt{IRIVER_RC_H100_PAD}{&}    & Exit the game \\
 \end{btnmap}
 \end{table}
 
