--- a/manual/plugins/sliding.tex
+++ b/manual/plugins/sliding.tex
@@ -11,6 +11,7 @@ Key controls:
   \opt{RECORDER_PAD,ONDIO_PAD,h100,h300,x5,SANSA_E200_PAD,SANSA_C200_PAD%
        ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
     {\ButtonLeft, \ButtonRight, \ButtonUp\ and \ButtonDown}
+    \opt{IRIVER_RC_H100_PAD}{&} 
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}
     {\ButtonLeft{} / \ButtonRight{} / \ButtonMenu{} / \ButtonPlay}
   \opt{IRIVER_H10_PAD}
@@ -20,6 +21,7 @@ Key controls:
   \opt{RECORDER_PAD}{\ButtonFOne}
   \opt{ONDIO_PAD}{Long \ButtonMenu}
   \opt{h100,h300,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect} 
+    \opt{IRIVER_RC_H100_PAD}{&} 
   \opt{x5,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonLeft}
   \opt{IRIVER_H10_PAD}{\ButtonRew}
@@ -28,6 +30,7 @@ Key controls:
   \opt{RECORDER_PAD}{\ButtonFTwo}
   \opt{ONDIO_PAD}{\ButtonMenu}
   \opt{h100,h300}{\ButtonOn}
+    \opt{IRIVER_RC_H100_PAD}{&} 
   \opt{x5,IRIVER_H10_PAD}{\ButtonPlay}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonRight}
   \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
@@ -37,6 +40,7 @@ Key controls:
   & Change between picture and numbered tiles \\
   %
   \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+    \opt{IRIVER_RC_H100_PAD}{&} 
   \opt{x5,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}
     {\ButtonPower}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
