--- a/manual/plugins/spacerocks.tex
+++ b/manual/plugins/spacerocks.tex
@@ -12,12 +12,14 @@ UFO will appear -- shoot this for extra points.
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD%
         ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
         {\ButtonSelect}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     & Shoot\\
     %
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
         ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
         {\ButtonUp}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
     & Thrust\\
@@ -25,12 +27,14 @@ UFO will appear -- shoot this for extra points.
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
         ,IRIVER_H10_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
         {\ButtonLeft / \ButtonRight}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollBack / \ButtonScrollFwd}
     & Turn left/right\\
     %
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
         ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
         {\ButtonDown}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
     & Teleport\\
@@ -38,6 +42,7 @@ UFO will appear -- shoot this for extra points.
     \opt{RECORDER_PAD}{\ButtonOn}
     \opt{ONDIO_PAD}{\ButtonMenu+\ButtonOff}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonPlay}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
     \opt{GIGABEAT_PAD}{\ButtonA}
@@ -45,6 +50,7 @@ UFO will appear -- shoot this for extra points.
     & Pause game\\
     %
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,GIGABEAT_PAD,MROBE100_PAD,SANSA_C200_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
