--- a/manual/plugins/zxbox.tex
+++ b/manual/plugins/zxbox.tex
@@ -19,12 +19,14 @@ including an additional but fixed menu button, are assigned as follows:
         ,IAUDIO_X5_PAD,SANSA_C200_PAD,SANSA_E200_PAD,MROBE100_PAD}{\ButtonUp/\ButtonDown/}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp/\ButtonScrollDown/}
     \ButtonLeft/\ButtonRight
+    \opt{IRIVER_RC_H100_PAD}{&}
     & Directional movement\\
     %
     \opt{IPOD_3G_PAD,IPOD_4G_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,IAUDIO_X5_PAD%
         ,SANSA_C200_PAD,SANSA_E200_PAD,MROBE100_PAD}{\ButtonSelect}
     \opt{RECORDER_PAD}{\ButtonPlay}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     & Jump/Fire\\
@@ -33,6 +35,7 @@ including an additional but fixed menu button, are assigned as follows:
     \opt{ONDIO_PAD}{\ButtonOff}
     \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonHold{} switch}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonMenu}
     \opt{SANSA_C200_PAD,SANSA_E200_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{IAUDIO_X5_PAD}{\ButtonPlay}
