--- a/manual/rockbox_interface/main.tex
+++ b/manual/rockbox_interface/main.tex
@@ -424,6 +424,7 @@ To turn on and off your Rockbox enabled \dap{} use the following keys:
   \begin{table}
     \begin{btnmap}{}{}
       \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}%
+      \opt{IRIVER_RC_H100_PAD}{& \ButtonRCOn}%
       \opt{IPOD_4G_PAD}{\ButtonMenu{} / \ButtonSelect}%
       \opt{IPOD_3G_PAD}{\ButtonMenu{} / \ButtonPlay}%
       \opt{ONDIO_PAD}{\ButtonOff}\opt{RECORDER_PAD,PLAYER_PAD}%
@@ -432,6 +433,7 @@ To turn on and off your Rockbox enabled \dap{} use the following keys:
           {\ButtonPower}%
       & Start Rockbox\\
       \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{Long \ButtonOff}%
+      \opt{IRIVER_RC_H100_PAD}{& Long \ButtonRCStop}%
       \opt{IPOD_4G_PAD,IPOD_3G_PAD}{Long \ButtonPlay}%
       \opt{ONDIO_PAD,recorderv2fm}{Long \ButtonOff}%
       \opt{recorder}{Double tap \ButtonOff\ when playback is stopped}%
