--- a/manual/configure_rockbox/sound_settings.tex
+++ b/manual/configure_rockbox/sound_settings.tex
@@ -329,33 +329,39 @@ change to customise your listening experience.
   \begin{table}
     \begin{btnmap}{}{}
       \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_VIDEO_PAD}{\ButtonScrollFwd}
-      \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD}{\ButtonUp} 
+      \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD}{\ButtonUp}
+      \opt{IRIVER_RC_H100_PAD}{& \ButtonRCFF}
       \opt{SANSA_E200_PAD}{\ButtonScrollBack}
       \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonRight}
       & Raises the highlighted parameter.\\
       %
       \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_VIDEO_PAD}{\ButtonScrollBack}
       \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD}{\ButtonDown} 
+      \opt{IRIVER_RC_H100_PAD}{& \ButtonRCRew}
       \opt{SANSA_E200_PAD}{\ButtonScrollFwd}
       \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonLeft}
       & Lowers the highlighted parameter.\\
       %
       \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD}{\ButtonLeft}
+      \opt{IRIVER_RC_H100_PAD}{& }
       \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_VIDEO_PAD}{\ButtonLeft} 
       \opt{SANSA_E200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonUp}
       & Moves to the previous EQ band. \\
       %
       \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD}{\ButtonRight}
+      \opt{IRIVER_RC_H100_PAD}{& }
       \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_VIDEO_PAD}{\ButtonRight} 
       \opt{SANSA_E200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonDown}
       & Moves to the next EQ band. \\
       %
       \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
+      \opt{IRIVER_RC_H100_PAD}{& \ButtonRCSelect}
       \opt{IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_VIDEO_PAD,SANSA_E200_PAD}{\ButtonSelect}
       & Toggles the cursor among the three parameters (gain, center frequency, 
       Q) for the selected EQ band.\\  
       %
       \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
+      \opt{IRIVER_RC_H100_PAD}{& \ButtonRCStop}
       \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_VIDEO_PAD}{\ButtonMenu} 
       \opt{IAUDIO_X5_PAD}{\ButtonPower/\ButtonRec}
       \opt{SANSA_E200_PAD}{\ButtonPower/\ButtonRight}
