--- a/manual/platform/h100.tex
+++ b/manual/platform/h100.tex
@@ -7,6 +7,8 @@
 \edef\UseOption{\UseOption,HAVE_DISK_STORAGE}
 \edef\UseOption{\UseOption,HAVE_CAR_ADAPTER_MODE}
 \edef\UseOption{\UseOption,iriver}
+\edef\UseOption{\UseOption,IRIVER_RC_H100_PAD}
+\edef\UseOption{\UseOption,HAVE_REMOTE_KEYMAP}
 
 \newcommand{\playerman}{Iriver}
 \newcommand{\playertype}{H100}
@@ -24,4 +26,5 @@
 
 % link external keymap file
 \input{platform/keymap-h100_h300.tex}
+\input{platform/remote-keymap-h100.tex}
 
