--- a/manual/plugins/blackjack.tex
+++ b/manual/plugins/blackjack.tex
@@ -16,12 +16,14 @@ visit\\
     \begin{btnmap}{}{}
     \multicolumn{2}{c}{\textbf{In menu}}\\\hline
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_S_PAD}{\ButtonPlay} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_C200_PAD,MROBE100_PAD}{\ButtonSelect}
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{GIGABEAT_PAD}{\ButtonA}
     & Start new game\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{RECORDER_PAD,IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonPlay}
     \opt{ONDIO_PAD,IAUDIO_X5_PAD,SANSA_C200_PAD}{\ButtonDown}
     \opt{IRIVER_H10_PAD}{\ButtonRight}
@@ -30,6 +32,7 @@ visit\\
     \opt{MROBE100_PAD}{\ButtonPlay}
         & Resume saved game\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonSelect}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{RECORDER_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD%
       ,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonRight}
     \opt{ONDIO_PAD,SANSA_E200_PAD}{\ButtonUp}
@@ -37,6 +40,7 @@ visit\\
     \opt{SANSA_C200_PAD}{\ButtonRec}
         & Show high scores\\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
@@ -46,11 +50,13 @@ visit\\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
         ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD,SANSA_C200_PAD}
       {\ButtonUp{} / \ButtonDown}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollFwd{} / \ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown}
       & Enter betting amount\\
     \opt{RECORDER_PAD}{\ButtonFOne}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IRIVER_H10_PAD}{\ButtonPlay}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
     \opt{ONDIO_PAD}{\ButtonLeft}
@@ -59,6 +65,7 @@ visit\\
     & Hit (Draw new card)\\
     \opt{RECORDER_PAD}{\ButtonFTwo}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD}{\ButtonRec}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
     \opt{ONDIO_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRight}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
@@ -66,6 +73,7 @@ visit\\
     & Stay (End hand)\\
     \opt{RECORDER_PAD}{\ButtonFThree}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IAUDIO_X5_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{ONDIO_PAD}{\ButtonUp}
@@ -73,6 +81,7 @@ visit\\
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonLeft}
     & Double down\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{RECORDER_PAD,IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonPlay}
     \opt{ONDIO_PAD,IAUDIO_X5_PAD,SANSA_C200_PAD}{\ButtonDown}
     \opt{IRIVER_H10_PAD}{\ButtonRight}
@@ -81,6 +90,7 @@ visit\\
     \opt{MROBE100_PAD}{\ButtonPlay}
         & Save game\\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
