--- a/manual/plugins/calculator.tex
+++ b/manual/plugins/calculator.tex
@@ -12,6 +12,7 @@ standard calculator. Pressing the ``1st'' and ``2nd'' buttons will toggle betwee
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
       ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
       {\ButtonUp{} / \ButtonDown}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{SANSA_E200_PAD}{/}
     \opt{scrollwheel}{\ButtonScrollFwd{} / \ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown}
@@ -22,6 +23,7 @@ standard calculator. Pressing the ``1st'' and ``2nd'' buttons will toggle betwee
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD%
       ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
       {\ButtonSelect}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IRIVER_H10_PAD}{\ButtonPlay}
     & Select a button\\
     %
@@ -29,6 +31,7 @@ standard calculator. Pressing the ``1st'' and ``2nd'' buttons will toggle betwee
         \opt{RECORDER_PAD}{\ButtonFOne}
         \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD%
             ,SANSA_C200_PAD}{\ButtonRec}
+           \opt{IRIVER_RC_H100_PAD}{&}
         \opt{IRIVER_H10_PAD}{\ButtonRew}
         \opt{GIGABEAT_PAD}{\ButtonA}
         \opt{GIGABEAT_S_PAD}{\ButtonPlay}
@@ -39,12 +42,14 @@ standard calculator. Pressing the ``1st'' and ``2nd'' buttons will toggle betwee
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{
         \opt{RECORDER_PAD}{\ButtonFTwo}
         \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
+          \opt{IRIVER_RC_H100_PAD}{&}
         & Cycle through the 4 basic operators\\
         %
     }
     \opt{RECORDER_PAD}{\ButtonFThree}
     \opt{ONDIO_PAD}{Long \ButtonMenu}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IRIVER_H10_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD}
       {\ButtonPlay}
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{Long \ButtonSelect}
@@ -52,6 +57,7 @@ standard calculator. Pressing the ``1st'' and ``2nd'' buttons will toggle betwee
     & Calculate\\
     %
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
       ,MROBE100_PAD}{\ButtonPower}
