--- a/manual/plugins/calendar.tex
+++ b/manual/plugins/calendar.tex
@@ -10,6 +10,7 @@ yearly, monthly, and weekly memos.
     \ButtonLeft{} / \ButtonRight{} /
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_C200_PAD%
         ,GIGABEAT_PAD,MROBE100_PAD,GIGABEAT_S_PAD}{\ButtonUp{} / \ButtonDown}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollFwd{} / \ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown}
     & Move the selector\\
@@ -17,12 +18,14 @@ yearly, monthly, and weekly memos.
     \opt{RECORDER_PAD}{\ButtonPlay}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD%
         ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IRIVER_H10_PAD}{\ButtonPlay}
     & Show memos for the selected day\\
     %
     \opt{RECORDER_PAD}{\ButtonOn{} + \ButtonUp{} / \ButtonDown}
     \opt{MROBE100_PAD}{\ButtonMenu{} + \ButtonUp{} / \ButtonDown}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode{} / \ButtonRec}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonPlay{} / \ButtonMenu}
     \opt{IAUDIO_X5_PAD}{\ButtonRec{} / \ButtonPlay{}}
     \opt{GIGABEAT_PAD,SANSA_C200_PAD}{\ButtonVolUp{} / \ButtonVolDown}
@@ -32,6 +35,7 @@ yearly, monthly, and weekly memos.
     & Previous / Next month\\
     %
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu{} + \ButtonSelect}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
