--- a/manual/plugins/flipit.tex
+++ b/manual/plugins/flipit.tex
@@ -11,6 +11,7 @@ a screen containing tokens of only one colour.
 \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
     ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
     {\ButtonUp{} / \ButtonDown{} / \ButtonLeft{} / \ButtonRight}
+      \opt{IRIVER_RC_H100_PAD}{&} 
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu{} / \ButtonPlay{} / \ButtonLeft{} / \ButtonRight}
 \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown{} / \ButtonLeft{} / \ButtonRight}
     & Move the cursor \\
@@ -19,12 +20,14 @@ a screen containing tokens of only one colour.
 \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD%
     ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
     {\ButtonSelect}
+      \opt{IRIVER_RC_H100_PAD}{&} 
 \opt{IRIVER_H10_PAD}{\ButtonRew}
     & Flip \\
 \opt{PLAYER_PAD}{\ButtonOn+\ButtonLeft}
 \opt{RECORDER_PAD}{\ButtonFOne}
 \opt{ONDIO_PAD}{\ButtonMenu+\ButtonLeft}
 \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
+      \opt{IRIVER_RC_H100_PAD}{&} 
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonLeft}
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay+\ButtonLeft}
 \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec+\ButtonLeft}
@@ -34,6 +37,7 @@ a screen containing tokens of only one colour.
 \opt{RECORDER_PAD}{\ButtonFTwo}
 \opt{ONDIO_PAD}{\ButtonMenu+\ButtonUp}
 \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
+      \opt{IRIVER_RC_H100_PAD}{&} 
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonPlay}
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay+\ButtonRight}
 \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec+\ButtonRight}
@@ -44,6 +48,7 @@ a screen containing tokens of only one colour.
 \opt{RECORDER_PAD}{\ButtonFThree}
 \opt{ONDIO_PAD}{\ButtonMenu+\ButtonRight}
 \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonRec}
+      \opt{IRIVER_RC_H100_PAD}{&} 
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonRight}
 \opt{IAUDIO_X5_PAD}{\ButtonPlay+\ButtonUp}
 \opt{IRIVER_H10_PAD}{\ButtonPlay+\ButtonScrollUp}
@@ -53,6 +58,7 @@ a screen containing tokens of only one colour.
     & Solve step by step \\
 \opt{PLAYER_PAD}{\ButtonStop}
 \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+      \opt{IRIVER_RC_H100_PAD}{&} 
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,GIGABEAT_PAD,MROBE100_PAD,SANSA_C200_PAD}{\ButtonPower}
 \opt{GIGABEAT_S_PAD}{\ButtonBack}
