--- a/manual/plugins/mazezam.tex
+++ b/manual/plugins/mazezam.tex
@@ -21,8 +21,10 @@ Luckily, there are checkpoints at levels four and eight.
         {\ButtonUp, \ButtonDown,}%
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp, \ButtonScrollDown,}
     \ButtonLeft, \ButtonRight
+      \opt{IRIVER_RC_H100_PAD}{&} 
     & Move Character\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,RECORDER_PAD,ONDIO_PAD}{\ButtonOff}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
