--- a/manual/plugins/metronome.tex
+++ b/manual/plugins/metronome.tex
@@ -9,11 +9,13 @@ on the appropriate button.
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IRIVER_H10_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{ONDIO_PAD,RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
         & Exit plugin \\
     \opt{PLAYER_PAD,RECORDER_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IRIVER_H10_PAD%
       ,IAUDIO_X5_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonPlay}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{ONDIO_PAD}{\ButtonMenu\ (Long: Stop)}
     \opt{GIGABEAT_PAD}{\ButtonA}
         & Start / Stop \\
@@ -21,14 +23,17 @@ on the appropriate button.
     \opt{ONDIO_PAD}{\ButtonMenu\ (repeatedly)}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD%
       ,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IRIVER_H10_PAD}{\ButtonFF}
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
         & Tap tempo \\
     \ButtonLeft\ / \ButtonRight
+      \opt{IRIVER_RC_H100_PAD}{&} 
         & Adjust tempo \\
     \opt{PLAYER_PAD}{\ButtonOn+\ButtonLeft\ / \ButtonOn+\ButtonRight}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
       ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonUp\ / \ButtonDown}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollFwd\ / \ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp\ / \ButtonScrollDown}
         & Adjust volume \\
