--- a/manual/plugins/minesweeper.tex
+++ b/manual/plugins/minesweeper.tex
@@ -30,6 +30,7 @@ the location of a mine, it can be tagged to avoid accidentally
   \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD%
       ,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
       {\ButtonUp{} / \ButtonDown{} / \ButtonLeft{} / \ButtonRight}
+      \opt{IRIVER_RC_H100_PAD}{&} 
   \opt{IRIVER_H10_PAD}
       {\ButtonScrollUp{} / \ButtonScrollDown{} / \ButtonLeft{} / \ButtonRight}
   & Move the cursor across the minefield \\
@@ -40,6 +41,7 @@ the location of a mine, it can be tagged to avoid accidentally
   \opt{RECORDER_PAD}{\ButtonFOne/\ButtonOn}
   \opt{ONDIO_PAD}{\ButtonMenu}
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn{} / \ButtonRec}
+      \opt{IRIVER_RC_H100_PAD}{&} 
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect}
   \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
   \opt{SANSA_E200_PAD}{\ButtonRec}
@@ -52,6 +54,7 @@ the location of a mine, it can be tagged to avoid accidentally
   \opt{ONDIO_PAD}{Long \ButtonMenu}
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD%
       ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect}
+      \opt{IRIVER_RC_H100_PAD}{&} 
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{Long \ButtonSelect}
   \opt{IRIVER_H10_PAD}{\ButtonRew}
   \opt{SANSA_C200_PAD}{Long \ButtonSelect{} / \ButtonVolUp}
@@ -60,6 +63,7 @@ the location of a mine, it can be tagged to avoid accidentally
   \opt{RECORDER_PAD}{\ButtonFThree}
   \opt{ONDIO_PAD}{Long \ButtonMenu+\ButtonOff}
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
+      \opt{IRIVER_RC_H100_PAD}{&} 
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonPlay}
   \opt{IAUDIO_X5_PAD,SANSA_C200_PAD}{\ButtonRec}
   \opt{SANSA_E200_PAD}{Long \ButtonRec}
@@ -68,6 +72,7 @@ the location of a mine, it can be tagged to avoid accidentally
   & Display the current game status \\
   %
   \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+      \opt{IRIVER_RC_H100_PAD}{&} 
   \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
   \opt{GIGABEAT_S_PAD}{\ButtonBack}
