--- a/manual/plugins/pacbox.tex
+++ b/manual/plugins/pacbox.tex
@@ -29,25 +29,32 @@ found at \url{http://www.mame.net}.
 \subsubsection{Keys}
 \begin{table}
   \begin{btnmap}{}{}
-    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD,h10,SANSA_E200_PAD,MROBE100_PAD}{\ButtonRight}
+    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,%
+        IPOD_3G_PAD,h10,SANSA_E200_PAD,MROBE100_PAD}{\ButtonRight}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonUp}
     \opt{h10_5gb}{\ButtonScrollUp}
     & Move Up\\
-    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD,h10,SANSA_E200_PAD,MROBE100_PAD}{\ButtonLeft}
+    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,%
+    IPOD_3G_PAD,h10,SANSA_E200_PAD,MROBE100_PAD}{\ButtonLeft}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{h10_5gb}{\ButtonScrollDown}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonDown}
     & Move Down\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,MROBE100_PAD}{\ButtonUp}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{h10}{\ButtonScrollUp}
     \opt{h10_5gb,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonLeft}
     & Move Left\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,MROBE100_PAD}{\ButtonDown}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonPlay}
     \opt{h10}{\ButtonScrollDown}
     \opt{h10_5gb,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonRight}
     & Move Right\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD}{\ButtonRec}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
     \opt{SANSA_E200_PAD}{\ButtonSelect+\ButtonDown}
@@ -57,15 +64,18 @@ found at \url{http://www.mame.net}.
     & Insert Coin\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD%
         ,SANSA_E200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IRIVER_H10_PAD}{\ButtonRew} 
     & 1-Player Start\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{n/a}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonPower}
     \opt{SANSA_E200_PAD}{\ButtonRec}
     \opt{MROBE100_PAD}{\ButtonMenu}
     & 2-Player Start\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,MROBE100_PAD}{\ButtonPlay}
     \opt{SANSA_E200_PAD}{\ButtonPower}
