--- a/manual/plugins/pegbox.tex
+++ b/manual/plugins/pegbox.tex
@@ -32,11 +32,14 @@ block and crosses which allow you to choose a replacement block.
     \opt{GIGABEAT_S_PAD}{\ButtonLeft, \ButtonRight}
     \opt{MROBE100_PAD}{\ButtonLeft, \ButtonRight}
     \opt{SANSA_C200_PAD}{\ButtonLeft, \ButtonRight}
+
+      \opt{IRIVER_RC_H100_PAD}{&} 
         & to move around\\
 
     \opt{RECORDER_PAD}{\ButtonOn} 
     \opt{ONDIO_PAD}{\ButtonOff} 
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonSelect}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}{\ButtonSelect + \ButtonRight} 
     \opt{IAUDIO_X5_PAD}{\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonPlay}
@@ -50,6 +53,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{RECORDER_PAD}{\ButtonFTwo} 
     \opt{ONDIO_PAD}{\ButtonMenu + \ButtonRight} 
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}{\ButtonSelect + \ButtonLeft} 
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{Long \ButtonFF}
@@ -63,6 +67,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{RECORDER_PAD}{\ButtonFOne} 
     \opt{ONDIO_PAD}{\ButtonMenu + \ButtonUp} 
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}{\ButtonSelect + \ButtonMenu} 
     \opt{IAUDIO_X5_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonFF + \ButtonScrollUp}
@@ -77,6 +82,7 @@ block and crosses which allow you to choose a replacement block.
         \opt{RECORDER_PAD}{\ButtonFThree}
         \opt{ONDIO_PAD}{\ButtonMenu + \ButtonDown}
         \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonRec}
+             \opt{IRIVER_RC_H100_PAD}{&} 
         \opt{IRIVER_H10_PAD}{\ButtonFF + \ButtonScrollDown}
         \opt{SANSA_E200_PAD}{\ButtonScrollFwd}
         \opt{SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
@@ -87,6 +93,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{RECORDER_PAD}{\ButtonOff} 
     \opt{ONDIO_PAD}{\ButtonMenu + \ButtonOff} 
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}{\ButtonSelect + \ButtonPlay} 
     \opt{IAUDIO_X5_PAD}{\ButtonPower}
     \opt{IRIVER_H10_PAD}{\ButtonPower}
