--- a/manual/plugins/plasma.tex
+++ b/manual/plugins/plasma.tex
@@ -8,6 +8,7 @@ Plasma is a demo displaying a 80's style retro plasma effect.
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollFwd\ / \ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp\ / \ButtonScrollDown}
     \nopt{IPOD_4G_PAD,IPOD_3G_PAD,IRIVER_H10_PAD}{\ButtonUp\ / \ButtonDown}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     & Adjust frequency\\
     \opt{lcd_color}{
         \opt{IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
@@ -17,6 +18,7 @@ Plasma is a demo displaying a 80's style retro plasma effect.
         & Change colours\\
     }
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}
         {\ButtonPower}
