--- a/manual/plugins/pong.tex
+++ b/manual/plugins/pong.tex
@@ -8,6 +8,7 @@ Pong is a simple two player ``tennis game''. Whenever a player misses the ball t
     \opt{ONDIO_PAD,SANSA_E200_PAD}{\ButtonLeft}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,GIGABEAT_PAD%
       ,GIGABEAT_S_PAD}{\ButtonUp}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu} 
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
     \opt{SANSA_C200_PAD}{\ButtonVolUp}
@@ -17,6 +18,7 @@ Pong is a simple two player ``tennis game''. Whenever a player misses the ball t
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD%
       ,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonDown}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
     \opt{SANSA_C200_PAD}{\ButtonVolDown}
     \opt{MROBE100_PAD}{\ButtonLeft}
@@ -24,6 +26,7 @@ Pong is a simple two player ``tennis game''. Whenever a player misses the ball t
     \opt{RECORDER_PAD}{\ButtonFThree}
     \opt{ONDIO_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonUp}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonRight}
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
@@ -33,12 +36,14 @@ Pong is a simple two player ``tennis game''. Whenever a player misses the ball t
     \opt{RECORDER_PAD,SANSA_E200_PAD}{\ButtonRight}
     \opt{ONDIO_PAD,SANSA_C200_PAD}{\ButtonDown}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD}{\ButtonPlay} 
     \opt{IRIVER_H10_PAD}{\ButtonFF}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
     \opt{MROBE100_PAD}{\ButtonRight}    
     & Right player down\\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+      \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
       ,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
