--- a/manual/plugins/random_folder_advance_config.tex
+++ b/manual/plugins/random_folder_advance_config.tex
@@ -27,9 +27,10 @@ it you need to have both \fname{-/CDs} and \fname{CDs} as entries.
 \subsubsection{Folder List Editor Keys}
 \begin{table}
 \begin{btnmap}{}{}
-	\ActionStdOk{} & Delete selected folder\\
-	\ActionStdContext{} & Bring up the context menu which allows you to
+	\ActionStdOk{} \opt{IRIVER_RC_H100_PAD}{&} & Delete selected folder\\
+	\ActionStdContext{} \opt{IRIVER_RC_H100_PAD}{&}
+      & Bring up the context menu which allows you to
 	remove the selected folder or it's entire folder tree\\
-	\ActionStdCancel{} & Exit\\
+	\ActionStdCancel{} \opt{IRIVER_RC_H100_PAD}{&} & Exit\\
 \end{btnmap}
 \end{table}
