--- a/manual/plugins/rockblox.tex
+++ b/manual/plugins/rockblox.tex
@@ -3,14 +3,16 @@
 \screenshot{plugins/images/ss-rockblox}{Rockblox}{fig:rockblox}
 Rockblox is a Rockbox version of the classic falling blocks game from Russia. 
 The aim of the game is to make the falling blocks of different shapes 
-form full rows. Whenever a row is completed,  it will be cleared away, and you gain points. For every ten lines completed, the game level increases, 
-making the blocks fall faster. If the pile of blocks reaches the ceiling, the game is over.
+form full rows. Whenever a row is completed,  it will be cleared away, and you
+gain points. For every ten lines completed, the game level increases, making
+the blocks fall faster. If the pile of blocks reaches the ceiling, the game is over.
 
 \begin{table}
     \begin{btnmap}{}{}
     \opt{RECORDER_PAD}{\ButtonFOne}
     \opt{PLAYER_PAD}{\ButtonStop+\ButtonMenu}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonPlay}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
@@ -18,14 +20,15 @@ making the blocks fall faster. If the pile of blocks reaches the ceiling, the ga
     \opt{MROBE100_PAD}{\ButtonDisplay}
     \opt{ONDIO_PAD}{\ButtonMenu+\ButtonOff}
         & Restart game\\
-    \ButtonLeft
+    \ButtonLeft    \opt{IRIVER_RC_H100_PAD}{&} 
         & Move left\\
-    \ButtonRight
+    \ButtonRight    \opt{IRIVER_RC_H100_PAD}{&} 
         & Move right\\
     \opt{PLAYER_PAD}{\ButtonMenu}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
         ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
         {\ButtonDown}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
         & Move down\\
@@ -33,6 +36,7 @@ making the blocks fall faster. If the pile of blocks reaches the ceiling, the ga
     \opt{RECORDER_PAD}{\ButtonPlay}
     \opt{ONDIO_PAD}{\ButtonMenu+\ButtonUp}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD}{\ButtonSelect}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{scrollwheel}{\ButtonScrollFwd}
     \opt{IAUDIO_X5_PAD}{\ButtonPower}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
@@ -43,6 +47,7 @@ making the blocks fall faster. If the pile of blocks reaches the ceiling, the ga
     \opt{PLAYER_PAD}{\ButtonPlay}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD}
         {\ButtonUp}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollBack{} / \ButtonMenu}
     \opt{SANSA_E200_PAD}{\ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
@@ -53,17 +58,19 @@ making the blocks fall faster. If the pile of blocks reaches the ceiling, the ga
     \opt{PLAYER_PAD,RECORDER_PAD}{\ButtonOn}
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
         ,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect}
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
         & Drop\\
     \opt{hold_button}{
-        \ButtonHold{} switch
+        \ButtonHold{} switch     \opt{IRIVER_RC_H100_PAD}{&} 
         & Pause\\
     }
     \opt{PLAYER_PAD}{\ButtonStop}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu+\ButtonSelect}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
