--- a/manual/plugins/rockboy.tex
+++ b/manual/plugins/rockboy.tex
@@ -17,10 +17,12 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
     \opt{IPOD_4G_PAD}{Tap \ButtonPlay{} / \ButtonMenu}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown}
     / \ButtonLeft{} / \ButtonRight
+    \opt{IRIVER_RC_H100_PAD}{&} 
     & Direction keys\\
     %
     \opt{RECORDER_PAD}{\ButtonFOne}
     \opt{IRIVER_H100_PAD}{\ButtonOn}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IRIVER_H300_PAD}{\ButtonRec}
     \opt{IPOD_4G_PAD}{Tap \btnfnt{Top-Right}}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
@@ -30,6 +32,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
     %
     \opt{RECORDER_PAD}{\ButtonFTwo}
     \opt{IRIVER_H100_PAD}{\ButtonOff}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IRIVER_H300_PAD}{\ButtonMode}
     \opt{IPOD_4G_PAD}{Tap \btnfnt{Top-Left}}
     \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
@@ -39,6 +42,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
     %
     \opt{RECORDER_PAD}{\ButtonFThree}
     \opt{IRIVER_H100_PAD}{\ButtonRec}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IRIVER_H300_PAD}{\ButtonOn}
     \opt{IPOD_4G_PAD}{Tap \btnfnt{Bottom-Right} /~Press \ButtonSelect}
     \opt{IAUDIO_X5_PAD}{\ButtonSelect}
@@ -52,6 +56,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
     \nopt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{
         \opt{RECORDER_PAD}{\ButtonPlay}
         \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonSelect}
+            \opt{IRIVER_RC_H100_PAD}{&} 
         \opt{IPOD_4G_PAD}{Tap \btnfnt{Bottom-Left}}
         \opt{SANSA_E200_PAD}{\ButtonScrollFwd}
         \opt{SANSA_C200_PAD}{\ButtonVolUp}
@@ -62,11 +67,13 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
     \opt{RECORDER_PAD,IRIVER_H100_PAD,m5}{
         \opt{RECORDER_PAD}{\ButtonOn}
         \opt{IRIVER_H100_PAD,IAUDIO_X5_PAD}{\ButtonHold{} switch}
+            \opt{IRIVER_RC_H100_PAD}{&} 
         & Cycle display scaling modes\\
     %
     }
     \opt{RECORDER_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IRIVER_H100_PAD}{\ButtonMode}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD}{\ButtonHold{} switch}
     \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD,IRIVER_H10_PAD}{\ButtonPower}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonMenu}
