--- a/manual/plugins/solitaire.tex
+++ b/manual/plugins/solitaire.tex
@@ -21,6 +21,7 @@ visit
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollFwd{} / \ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown}
     / \ButtonLeft{} / \ButtonRight
+       \opt{IRIVER_RC_H100_PAD}{&} 
       & Move Cursor around.\\
     %
     \opt{RECORDER_PAD}{\ButtonOn}
@@ -28,12 +29,14 @@ visit
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD%
       ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
       {\ButtonSelect}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IRIVER_H10_PAD}{\ButtonPlay}
       & Select cards, move cards, reveal hidden cards...\\
     %
     \opt{RECORDER_PAD}{\ButtonFOne}
     \opt{ONDIO_PAD}{Long \ButtonMenu}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
       {\ButtonMenu}
     \opt{IAUDIO_X5_PAD}{\ButtonPlay}
@@ -41,11 +44,13 @@ visit
     \opt{SANSA_E200_PAD}{\ButtonRec}
     \opt{SANSA_C200_PAD}{\ButtonVolDown}
       & If a card was selected -- unselect it, else\\
+      \opt{IRIVER_RC_H100_PAD}{&} 
       & Draw 3 new cards from the remains stack\\
     %
     \opt{RECORDER_PAD,IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonPlay}
     \opt{ONDIO_PAD}{Long \ButtonDown}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn{} + \ButtonLeft}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IAUDIO_X5_PAD}{Long \ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
     \opt{SANSA_E200_PAD}{\ButtonLeft}
@@ -59,6 +64,7 @@ visit
     \opt{ONDIO_PAD}{Long \ButtonUp}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD%
       ,MROBE100_PAD,SANSA_C200_PAD}{Long \ButtonSelect}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{Long \ButtonMenu}
     \opt{IAUDIO_X5_PAD}{Long \ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
@@ -68,6 +74,7 @@ visit
     \opt{RECORDER_PAD}{\ButtonFThree}
     \opt{IRIVER_H10_PAD,ONDIO_PAD,IPOD_4G_PAD,IPOD_3G_PAD}{Long \ButtonRight}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn{} + \ButtonRight}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{SANSA_E200_PAD}{\ButtonRight}
     \opt{GIGABEAT_PAD}{\ButtonA{} + \ButtonRight}
@@ -77,6 +84,7 @@ visit
       & Put the card on top of the remains stack on one of the final colour stacks.\\
     %
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H300_PAD,IRIVER_H100_PAD}{\ButtonOff}
+    \opt{IRIVER_RC_H100_PAD}{&} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu{} + \ButtonSelect}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
