--- a/manual/plugins/stopwatch.tex
+++ b/manual/plugins/stopwatch.tex
@@ -7,6 +7,7 @@ A simple stopwatch program with support for saving times.
     \begin{btnmap}{}{}
     \opt{PLAYER_PAD}{\ButtonMenu}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
         ,MROBE100_PAD}{\ButtonPower}
@@ -17,12 +18,14 @@ A simple stopwatch program with support for saving times.
     \opt{ONDIO_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRight}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,GIGABEAT_PAD,MROBE100_PAD,IPOD_4G_PAD%
         ,IPOD_3G_PAD}{\ButtonSelect}
+    \opt{IRIVER_RC_H100_PAD}{&}
     & Start / stop \\
     %
     \opt{PLAYER_PAD}{\ButtonStop}
     \opt{RECORDER_PAD,ONDIO_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD%
         ,SANSA_C200_PAD}{\ButtonLeft}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonDown}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{GIGABEAT_PAD}{\ButtonA}
@@ -31,6 +34,7 @@ A simple stopwatch program with support for saving times.
     & Reset timer (only when timer is stopped)\\
     %
     \opt{PLAYER_PAD,RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{ONDIO_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonMenu}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonRight}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
@@ -38,6 +42,7 @@ A simple stopwatch program with support for saving times.
     & Take lap time \\
     %
     \opt{PLAYER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonLeft{} / \ButtonRight}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{RECORDER_PAD,ONDIO_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
         ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonUp{} / \ButtonDown}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollFwd{} / \ButtonScrollBack}
