--- a/manual/plugins/text_viewer.tex
+++ b/manual/plugins/text_viewer.tex
@@ -11,6 +11,7 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
     \opt{PLAYER_PAD}{\ButtonLeft}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
         ,SANSA_E200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonUp}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
     \opt{SANSA_C200_PAD}{\ButtonVolUp}
@@ -20,6 +21,7 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
     \opt{PLAYER_PAD}{\ButtonRight}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
         ,SANSA_E200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonDown}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollFwd}
     \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
     \opt{SANSA_C200_PAD}{\ButtonVolDown}
@@ -29,18 +31,21 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
     \opt{PLAYER_PAD}{\ButtonMenu+\ButtonLeft}
     \opt{GIGABEAT_S_PAD}{\ButtonPlay+\ButtonLeft}
     \nopt{PLAYER_PAD,GIGABEAT_S_PAD}{\ButtonLeft}
+    \opt{IRIVER_RC_H100_PAD}{&}
         & Top of file (Narrow mode) /
         One screen left (Wide mode)\\
 
     \opt{PLAYER_PAD}{\ButtonMenu+\ButtonRight}
     \opt{GIGABEAT_S_PAD}{\ButtonPlay+\ButtonRight}
     \nopt{PLAYER_PAD,GIGABEAT_S_PAD}{\ButtonRight}
+    \opt{IRIVER_RC_H100_PAD}{&}
         & Bottom of file (Narrow mode) /
         One screen right (Wide mode)\\
 
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,SANSA_E200_PAD%
       ,SANSA_C200_PAD,GIGABEAT_S_PAD}{%
         \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn+\ButtonUp}
+           \opt{IRIVER_RC_H100_PAD}{&}
         \opt{SANSA_E200_PAD}{\ButtonScrollBack}
         \opt{SANSA_C200_PAD}{\ButtonUp}
         \opt{GIGABEAT_S_PAD}{\ButtonUp}
@@ -50,6 +55,7 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,SANSA_E200_PAD%
       ,SANSA_C200_PAD,GIGABEAT_S_PAD}{%
         \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn+\ButtonDown}
+        \opt{IRIVER_RC_H100_PAD}{&}
         \opt{SANSA_E200_PAD}{\ButtonScrollFwd}
         \opt{SANSA_C200_PAD}{\ButtonDown}
         \opt{GIGABEAT_S_PAD}{\ButtonDown}
@@ -58,12 +64,14 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
 
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,GIGABEAT_S_PAD}{
         \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn+\ButtonLeft}
+            \opt{IRIVER_RC_H100_PAD}{&}
         \opt{GIGABEAT_S_PAD}{\ButtonLeft}
         & One column left\\
     }
 
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,GIGABEAT_S_PAD}{
         \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn+\ButtonRight}
+          \opt{IRIVER_RC_H100_PAD}{&}
         \opt{GIGABEAT_S_PAD}{\ButtonRight}
         & One column right\\
     }
@@ -71,6 +79,7 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
     \opt{RECORDER_PAD,PLAYER_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD%
         ,IRIVER_H10_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonSelect}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{SANSA_C200_PAD,SANSA_E200_PAD}{\ButtonRec}
@@ -82,12 +91,14 @@ files without a \fname{.txt} extension by using \emph{Open with} from the
     \opt{PLAYER_PAD,IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD%
       ,MROBE100_PAD}{\ButtonMenu}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IAUDIO_X5_PAD,SANSA_C200_PAD,SANSA_E200_PAD}{\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
         & Enter menu\\
 
     \opt{PLAYER_PAD}{\ButtonStop}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
         ,MROBE100_PAD}{\ButtonPower}
