--- a/manual/plugins/vumeter.tex
+++ b/manual/plugins/vumeter.tex
@@ -12,12 +12,14 @@ and the meter scale can be changed.
 \begin{table}
 \begin{btnmap}{}{}
 \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
+    \opt{IRIVER_RC_H100_PAD}{&}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
      ,MROBE100_PAD}{\ButtonPower}
 \opt{GIGABEAT_S_PAD}{\ButtonBack}
     & Save settings and quit\\
 \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
+    \opt{IRIVER_RC_H100_PAD}{&}
 \opt{ONDIO_PAD}{\ButtonMenu}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
 \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
@@ -29,17 +31,20 @@ and the meter scale can be changed.
 \opt{ONDIO_PAD}{Long \ButtonMenu}
 \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD%
      ,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
+    \opt{IRIVER_RC_H100_PAD}{&}
 \opt{IRIVER_H10_PAD}{\ButtonRew}
 \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
     & Settings\\
 \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
      ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonUp}
+    \opt{IRIVER_RC_H100_PAD}{&}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollFwd}
 \opt{SANSA_C200_PAD}{\ButtonVolUp}
 \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
     & Raise Volume\\
 \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
      ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonDown}
+    \opt{IRIVER_RC_H100_PAD}{&}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollBack}
 \opt{SANSA_C200_PAD}{\ButtonVolDown}
 \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
