--- a/manual/plugins/xobox.tex
+++ b/manual/plugins/xobox.tex
@@ -15,8 +15,10 @@ To finish a level you have to section off more than 75\%.
         {\ButtonUp, \ButtonDown,}%
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp, \ButtonScrollDown,}
     \ButtonLeft, \ButtonRight
+    \opt{IRIVER_RC_H100_PAD}{&}
     & Move around the arena\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,RECORDER_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
@@ -25,6 +27,7 @@ To finish a level you have to section off more than 75\%.
     \opt{MROBE100_PAD}{\ButtonDisplay}
     & Pause\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,RECORDER_PAD,ONDIO_PAD}{\ButtonOff}
+    \opt{IRIVER_RC_H100_PAD}{&}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect{} + \ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
